2001-01-26  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_stubs.adb: Use remote shell command and options from
	platform_specific instead of those from xe_defs. Fix differences
	between platforms in regression test.

2001-01-24  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_stubs.adb: Move partition launching code from partition.adb
	to s-garela.adb in order to execute system() before activating any
	garlic tasks.

	* Makefile.in: Updated.

2001-01-19  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_check.adb: in (Recompile), when we decide to discard a
	compilation error because the unit is not needed to build the
	partition, check that the unit name extracted by
	Make.Extract_Failure is not No_Name.

2000-12-11  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_stubs.adb: Call initialization procedure of each filter
	package in System.Garlic.Elaboration.Initialize. The problem was
	that the filter initialization code was executed during filter
	package elaboration. As Name_Table depends on tasking
	configuration and as the filter packages depend on Name_Table, we
	have to postpone the filter initialization after the Name_Table
	initialization. Note that Name_Table depends on the initialization
	of the GARLIC tasking. First, we initialize the tasking packages
	of GARLIC (No_Tasking or Tasking), then Name_Table and finaly the
	filter packages.

	* xe_utils.adb, xe_utils.ads: Add procedures to deal with Filters
	units.
   
2000-12-07  Laurent Pautet  <pautet@arlequin.enst.fr>

	* Makefile.am, Makefile.in: Add b~* files to the CLEANFILES

	* xe_check.adb: Add System.Partition_Interface and System.RPC
	units to the unit check list. They may not appear in the
	dependencies of user units (only the stubs and skels will always
	depend on these units). For this reason, if an internal GARLIC
	unit is in the path, it may not be recompiled even with flag
	-a. We add these two units to force consistency check in such
	situation.
