@@ -96,7 +96,7 @@ package XE is
 
    -- Pragma_Type --
 
-   type Pragma_Type is new Types.Int range 300 .. 306;
+   type Pragma_Type is new Types.Int range 300 .. 307;
 
    Pragma_Unknown         : constant Pragma_Type := 300;
    Pragma_Starter         : constant Pragma_Type := 301;
@@ -105,6 +105,7 @@ package XE is
    Pragma_Version         : constant Pragma_Type := 304;
    Pragma_Reg_Filter      : constant Pragma_Type := 305;
    Pragma_Priority        : constant Pragma_Type := 306;
+   Pragma_Remote_Shell    : constant Pragma_Type := 307;
 
 
    -- Import_Method_Type --
@@ -212,6 +213,7 @@ package XE is
    Pragma_Version_Node       : Subprogram_Id;
    Pragma_Reg_Filter_Node    : Subprogram_Id;
    Pragma_Priority_Node      : Subprogram_Id;
+   Pragma_Remote_Shell_Node  : Subprogram_Id;
 
    --  Size of an unconstrained array.
 
